swim_common/src/form/tests/derive/form/tag_no_to_string.stderr
error[E0277]: the trait bound `B: AsRef<str>` is not satisfied
  --> src/form/tests/derive/form/tag_no_to_string.rs:24:9
   |
24 |         a: B,
    |              ^^^^ the trait `swim_common::form::structural::Tag` is not implemented for `B`
    |
    = note: required because of the requirements on the impl of `Recognizer` for `TagRecognizer<B>`
note: required by `reset`
   --> src/form/structural/read/recognizer/mod.rs
    |
    |     fn reset(&mut self);
    |     ^^^^^^^^^^^^^^^^^^^^
    = note: this error originates in the derive macro `Form` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `B: swim_common::form::structural::Tag` is not satisfied
   --> src/form/tests/derive/form/tag_no_to_string.rs:21:14
    |
21  |     #[derive(Form)]
    |              ^^^^ the trait `swim_common::form::structural::Tag` is not implemented for `B`
    |
    = note: required because of the requirements on the impl of `Default` for `TagRecognizer<B>`
note: required by `std::default::Default::default`
   --> $RUST/core/src/default.rs
    |
    |     fn default() -> Self;
    |     ^^^^^^^^^^^^^^^^^^^^^
    = note: this error originates in the derive macro `Form` (in Nightly builds, run with -Z macro-backtrace for more info)
